fix:数字黔老导入优化